--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
-Django==3.2.3
-djangorestframework==3.12.4
-django-cors-headers==3.13.0
+Django==5.2.8
+djangorestframework==3.16.1
+django-cors-headers==4.9.0
+psycopg2-binary==2.9.11
